--- a/Ej.Client/Views/Contact/Error.cshtml
+++ b/Ej.Client/Views/Contact/Error.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Globalization;
-
-@model ContactViewModel
+﻿@model ContactViewModel
 
 @{
     ViewData["Title"] = $"Hi {Model.Name}";
