--- a/Ej.Client/Views/Shared/_GdprConsent.cshtml
+++ b/Ej.Client/Views/Shared/_GdprConsent.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Globalization;
-
-<section>
+﻿<section>
 
     <div id="gdpr-consent" class="p-4 gdpr-consent alert-dismissable alert-dismissible fade show fixed-bottom" role="alert">
         <div class="container">
