--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Globalization;
-
-<header class="header mb-5">
+﻿<header class="header mb-5">
 
     <nav class="navbar navbar-dark">
 
