--- a/Ej.Client/Views/Home/Index.cshtml
+++ b/Ej.Client/Views/Home/Index.cshtml
@@ -1,11 +1,20 @@
-﻿@{
+﻿@using Ej.Application.Configuration
+
+@{
     ViewData["Title"] = "Home";
     ViewData["MetaTitle"] = "Home";
 }
 
+@inject IOptions<LocalizationOptions> _localizationOptions
+
 <section id="hero">
     <img src="~/img/face-headphones-400x400.jpg" width="250px" width="250px" class="img-fluid mx-auto d-block rounded-circle mb-4" alt="Eric Jansen" />
 </section>
+
+<h5>
+    DefaultCulture: @_localizationOptions!.Value!.DefaultCulture!.Name
+    SupportedCultures: @string.Join(", ", _localizationOptions!.Value!.SupportedCultures!.Select(c => c.Name))
+</h5>
 
 <section id="about">
     <h2>Hello,</h2>
