--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -14,13 +14,13 @@
         </div>
 
         <div class="d-block d-md-none pt-2">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Show Menu">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="@_htmlLocalizer["__AriaLabel_ShowMenu"]" ">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas w-auto offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header align-content-end">
                     <p class="offcanvas-title me-5" id="offcanvasDarkNavbarLabel">&nbsp;</p>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close" aria-label="Close Menu"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="@_htmlLocalizer["__AriaLabel_CloseMenu"]"></button>
                 </div>
                 <div class="offcanvas-body mx-3">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
