--- a/Ej.Client/Views/Contact/Success.cshtml
+++ b/Ej.Client/Views/Contact/Success.cshtml
@@ -1,9 +1,5 @@
 ﻿@model ContactViewModel
 
-@{
-    ViewData["Title"] = $"Hi {Model.Name}";
-}
-
 <div class="mb-5 text-center">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
         <path fill="#bae0bd" d="M15,28.5C7.6,28.5,1.5,22.4,1.5,15S7.6,1.5,15,1.5S28.5,7.6,28.5,15S22.4,28.5,15,28.5z"></path>
@@ -12,8 +8,6 @@
     </svg>
 </div>
 
-<h2>@ViewData["Title"],</h2>
+<h2>@ViewBag.PageTitle</h2>
 
-<p>Thank you for reaching out to me.  I'll get back to you from the moment I read your message.</p>
-<p>Ciao,</p>
-<p>@_tenantProvider.Tenant?.ShortName</p>
+@Html.Raw(ViewBag.Content)
