Removed ILocalizer from most views.

--- a/Ej.Client/Views/Contact/Error.cshtml
+++ b/Ej.Client/Views/Contact/Error.cshtml
@@ -1,8 +1,4 @@
-﻿@model ContactViewModel
-
-@inject IHtmlLocalizer<ContactController> _localizer
-
-<section class="error">
+﻿<section class="error">
 
     <div class="mb-5 text-center">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
