--- a/Ej.Client/Views/Home/Privacy.cshtml
+++ b/Ej.Client/Views/Home/Privacy.cshtml
@@ -1,10 +1,3 @@
-﻿@inject IHtmlLocalizer<HomeController> _localizer;
-
-@{
-    ViewData["Title"] = _localizer["__View_Privacy_Title"];
-    ViewData["MetaTitle"] = _localizer["__View_Privacy_MetaTitle"];
-}
-
-<h2>@ViewData["Title"]</h2>
+﻿<h2>@ViewData["Title"]</h2>
 
 @Html.Raw(ViewBag.Content)
