Fixed sidebar navigation issue and cleaned up code.

--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -16,7 +16,7 @@
         </div>
 
         <div class="d-block d-md-none pt-2">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="@_htmlLocalizer["__AriaLabel_ShowMenu"]" ">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="@_htmlLocalizer["__AriaLabel_ShowMenu"]">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas w-auto offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
