Added language selector for sidebar.

--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -35,6 +35,10 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Home" asp-action="Privacy" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="@_htmlLocalizer["__NavItem_PrivacyPolicy"]">@_htmlLocalizer["__NavItem_PrivacyPolicy"]</a>
                         </li>
+                        <li>
+                            <hr />
+                        </li>
+                        <partial name="_LanguageSelectorSideBar" />
                     </ul>
                 </div>
             </div>
