--- a/Ej.Client/Views/Shared/_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Layout.cshtml
@@ -34,7 +34,6 @@
         <meta property="@ogTag.Key" content="@(ViewData[ogTag.Key] ?? ogTag.Value)" />
     }
 }
-
         <!-- Title -->
         <title>@ViewData["Title"] - @_tenantProvider.Tenant?.Name</title>
 
@@ -42,6 +41,7 @@
         <link rel="apple-touch-icon"  href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="~/css/ericjansen.min.css" asp-append-version="true" />
     </head>
 
@@ -52,6 +52,7 @@
         <!-- End Google Tag Manager (noscript) -->
 
         <div class="container">
+
 
             <partial name="_Header" />
 
