Added resource files for translations.

--- a/Ej.Client/Views/Shared/_LanguageSelectorDropDown.cshtml
+++ b/Ej.Client/Views/Shared/_LanguageSelectorDropDown.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Http.Extensions;
+@using Ej.Client.Configuration;
 
-@inject IHtmlLocalizer<SharedResource> _localizer
 @inject ICultureManager _cultureManager
 
 <div class="nav-item dropdown" style="display: inline;">
