Fixed waardenboom data and content reading.

--- a/Ej.Client/wwwroot/css/ericjansen.scss
+++ b/Ej.Client/wwwroot/css/ericjansen.scss
@@ -120,3 +120,11 @@ footer > p > a {
     background-color: #000000;
     display: none;
 }
+
+
+/*--------------------------------------------------------------
+# Modal
+--------------------------------------------------------------*/
+.modal {
+    color: #000000;
+}
