--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -1,23 +1,28 @@
 ﻿<h2>@ViewData["Title"]</h2>
 
 <section class="karus">
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-            <div class="card">
-                <img src="~/karus/waardenboom-card.jpg" />
-
+    <div class="card mb-3 mt-3">
+        <div class="row no-gutters">
+            <div class="col-4 col-md-3">
+                <img src="~/karus/card-waardenboom.png" class="card-img" alt="...">
+            </div>
+            <div class="col-8 col-md-9">
                 <div class="card-body">
                     <h5 class="card-title"><a class="stretched-link" asp-controller="Karus" asp-action="Waardenboom" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Waardenboom">Waardenboom</a></h5>
-                    <p class="card-text">Bladzijde 32</p>
+                    <p class="card-text">Je zeven levenswaarden.</p>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card">
-                <i class="bi bi-box"></i>
+    </div>
+    <div class="card mb-3 mt-3">
+        <div class="row no-gutters">
+            <div class="col-4 col-md-3">
+                <img src="~/karus/card-crisisbox.png" class="card-img" alt="...">
+            </div>
+            <div class="col-8 col-md-9">
                 <div class="card-body">
-                    <h5 class="card-title">Crisisbox</h5>
-                    <p class="card-text">Bladzijde 20</p>
+                    <h5 class="card-title"><a class="stretched-link" asp-controller="Karus" asp-action="Crisisplan" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Crisisplan">Crisisplan</a></h5>
+                    <p class="card-text">Je toolkit voor het managen van cravings en herval.</p>
                 </div>
             </div>
         </div>
