--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -1,17 +1,32 @@
 ﻿.karus {
     text {
         cursor: pointer;
-        font-family: Arial, sans-serif;
+        font-weight: bold;
         font-size: 4rem;
         fill: green;
         text-anchor: middle;
         border: 100px;
     }
+
     text:hover {
         fill: red;
         transition-duration: 0.5s;
     }
+
     text:not(:hover) {
         transition-duration: 1s
-    }   
+    }
+
+    .card {
+        transition: transform 0.3s ease;
+        h5 {
+            a {
+                color: black;
+            }
+        }
+    }
+
+    .card:hover {
+        transform: scale(1.02);
+    }
 }
