--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -1,9 +1,9 @@
 ﻿.karus {
     text {
         cursor: pointer;
-        font-weight: bold;
+        font-weight: bolder;
         font-size: 4rem;
-        fill: green;
+        fill: #7CFC00;
         text-anchor: middle;
         border: 100px;
     }
@@ -19,6 +19,7 @@
 
     .card {
         transition: transform 0.3s ease;
+
         h5 {
             a {
                 color: black;
