Update waardenboom values data.

--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="col-8 col-md-9">
                 <div class="card-body">
-                    <h5 class="card-title"><a class="stretched-link" asp-controller="Karus" asp-action="Crisisplan" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Crisisplan">Crisisplan</a></h5>
+                    <h5 class="card-title"><a class="stretched-link" asp-controller="Karus" asp-action="Crisisbox" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Crisisbox">Crisisbox</a></h5>
                     <p class="card-text">Je toolkit voor het managen van cravings en herval.</p>
                 </div>
             </div>
