Corrected content in WaardenboomValues.

--- a/Ej.Client/Views/Karus/Waardenboom.cshtml
+++ b/Ej.Client/Views/Karus/Waardenboom.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<WaardenboomValue>
 
 <h2>@ViewData["Title"]</h2>
-<p>Je zeven levenswaarden</p>
+<p>@ViewData["SubTitle"]</p>
 
 <section class="karus m-3 m-lg-5">
     <div class="row justify-content-center">
@@ -20,7 +20,6 @@
                     @:      @value.Name
                     @: </text>
                 }
-
             </svg>
         </div>
     </div>
