--- a/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
+++ b/Ej.Client/Views/Karus/CirkelVanVerandering.cshtml
@@ -3,5 +3,6 @@
 
 <section class="karus">
 
+    <img src="~/karus/data/cirkelvanverandering/cirkelvanverandering.png" alt="Cirkel van Verandering" />
 
 </section>
