BalansItems are fully implemented.

--- a/Ej.Client/Views/Karus/Balans.cshtml
+++ b/Ej.Client/Views/Karus/Balans.cshtml
@@ -1,73 +1,49 @@
-﻿<h2>@ViewData["Title"]</h2>
-<p>@ViewData["SubTitle"]</p>
+﻿@model List<BalansItem>
+
+<h2>@ViewData["Title"]</h2>
+<h3>@ViewData["SubTitle"]</h3>
 
 <section class="karus karus_balans">
 
     <div class="accordion" id="accordionPanelsStayOpenExample">
+        @foreach(var item in Model ?? [])
+        {
         <div class="accordion-item">
             <h2 class="accordion-header">
-                <button class="accordion-button advantages" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    Voordelen van gebruik
+                <button class="accordion-button @item.CssClass" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse-@item.Id" aria-expanded="true" aria-controls="panelsStayOpen-collapse-@item.Id">
+                    @item.Title
                 </button>
             </h2>
-            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+            <div id="panelsStayOpen-collapse-@item.Id" class="accordion-collapse collapse show">
                 <div class="accordion-body">
                     <div class="container p-0">
                         <div class="row">
                             <div class="col col-sm-12 col-lg-6">
                                 <h6>Short term</h6>
-                                <ul>
-                                    <li>Milde euforie, voor een uur of twee</li>
-                                    <li>Socialer</li>
-                                    <li>Meer genieten van activiteiten voor zover die er zijn (reizen)</li>
-                                    <li>Angst-remmend of reducerend</li>
-                                    <li>Meer verbonden voelen (erbij horen) maar meer vroeger want ik herval altijd stiekem tot het te laat is en toch uitkomt</li>
+                                <ul class="">
+                                    @foreach(var value in item.ShortTermValues ?? [])
+                                    {
+                                        <li>@value</li>
+                                    }
                                 </ul>
                             </div>
                             <div class="col col-sm-12 col-lg-6">
                                 <h6>Long term</h6>
+                                <ul>
+                                    @foreach (var value in item.LongTermValues ?? [])
+                                    {
+                                        <li>@value</li>
+                                    }
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button disadvantages" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
-                    Nadelen van gebruik
-                </button>
-            </h2>
-            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button advantages" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
-                    Voordelen van stoppen
-                </button>
-            </h2>
-            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button disadvantages" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
-                    Nadelen van stoppen
-                </button>
-            </h2>
-            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse show">
-                <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-            </div>
-        </div>
+        }
     </div>
 
 </section>
+
+<h3>Mijn eigen balans</h3>
