--- a/Ej.Client/Views/Karus/Balans.cshtml
+++ b/Ej.Client/Views/Karus/Balans.cshtml
@@ -18,7 +18,7 @@
                 <div class="accordion-body">
                     <div class="container p-0">
                         <div class="row">
-                            <div class="col col-sm-12 col-lg-6">
+                            <div class="col col-sm-12 col-lg-6 mb-sm-3">
                                 <h6>Short term</h6>
                                 <ul class="@item.CssClass">
                                     @foreach(var value in item.ShortTermValues ?? [])
