--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -14,7 +14,10 @@
                     <div class="card">
                         <div class="row">
                             <div class="col-4 col-md-3 col-lg-4">
-                                <img src="@opdrachtValue.CardImageUri" class="card-img" alt="@opdrachtValue.Name">
+                                @if (!string.IsNullOrEmpty(opdrachtValue.CardImageUri))
+                                {
+                                    <img src="@opdrachtValue.CardImageUri" class="card-img" alt="@opdrachtValue.Name">
+                                }
                             </div>
                             <div class="col-8 col-md-9 col-lg-8">
                                 <div class="card-body">
