Typo and added logging to RedirectionMiddleware.

--- a/Ej.Client/Views/Karus/Balans.cshtml
+++ b/Ej.Client/Views/Karus/Balans.cshtml
@@ -77,7 +77,7 @@
             <li>
                 <i class="bi bi-check-lg"></i>
                 <strong>Altijd alcohol beschikbaar:</strong> Het grootste probleem is dat alcohol overal
-                makkelijk te krijgen is. Het is bijna onmogelijk om alcohol helemaal te vermijden
+                makkelijk te krijgen is. Het is bijna onmogelijk om alcohol helemaal te vermijden.
             </li>
             <li>
                 <i class="bi bi-check-lg"></i>
