--- a/Ej.Client/Views/Karus/Index.cshtml
+++ b/Ej.Client/Views/Karus/Index.cshtml
@@ -11,7 +11,7 @@
             @foreach (var opdrachtValue in Model)
             {
                 <div class="col">
-                    <div class="card">
+                    <div class="card task">
                         <div class="row">
                             <div class="col-4 col-md-3 col-lg-4">
                                 @if (!string.IsNullOrEmpty(opdrachtValue.CardImageUri))
