--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -6,7 +6,7 @@
     <div class="container p-0">
         <div class="row g-3">
             <div class="col col-12 col-md-6">
-                <partial name="_Crisisbox_Index" />
+                <partial name="_Crisisbox_MoneyCounter" />
             </div>
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_EmergencyContacts" />
